fixed shortlist z-index

--- a/src/Pages/ShortListPage/ShortListPage.css
+++ b/src/Pages/ShortListPage/ShortListPage.css
@@ -40,6 +40,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
   flex-wrap: wrap;
+  z-index: 0;
 }
 }
 
